force-app/main/default/objects/MemberBalanceStatus__c/MemberBalanceStatus__c.object-meta.xml
<CustomObject>
    <label>Member Balance Status</label>
    <nameField>
        <displayFormat>MBS-{0000000000}</displayFormat>
        <label>Member Balance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Member Balance Statuses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>