force-app/main/default/objects/MemberBalanceStatus__c/fields/BalanceMismatch__c.field-meta.xml
<CustomField>
    <fullName>BalanceMismatch__c</fullName>
    <externalId>true</externalId>
    <label>BalanceMismatch</label>
    <length>1</length>
    <type>Text</type>
</CustomField>