force-app/main/default/objects/MemberBalanceStatus__c/fields/CalculatedMemberBalance__c.field-meta.xml
<CustomField>
    <fullName>CalculatedMemberBalance__c</fullName>
    <label>Calculated Member Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>