force-app/main/default/objects/MemberBalanceStatus__c/fields/CalculatedMemberBalanceMismatch__c.field-meta.xml
<CustomField>
    <fullName>CalculatedMemberBalanceMismatch__c</fullName>
    <externalId>true</externalId>
    <label>Calculated Member Balance Mismatch</label>
    <length>1</length>
    <type>Text</type>
</CustomField>