force-app/main/default/objects/MemberBalanceStatus__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Currency</label>
    <referenceTo>FieloPLT__PointType__c</referenceTo>
    <relationshipLabel>Member Balance Statuses</relationshipLabel>
    <relationshipName>MemberBalanceStatuses</relationshipName>
    <type>Lookup</type>
</CustomField>