force-app/main/default/objects/MemberBalanceStatus__c/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Member</label>
    <referenceTo>FieloPLT__Member__c</referenceTo>
    <relationshipLabel>Member Balance Statuses</relationshipLabel>
    <relationshipName>MemberBalanceStatuses</relationshipName>
    <type>Lookup</type>
</CustomField>