force-app/main/default/objects/MemberBalanceStatus__c/fields/MemberBalance__c.field-meta.xml
<CustomField>
    <fullName>MemberBalance__c</fullName>
    <label>Member Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>