force-app/main/default/objects/MemberBalanceStatus__c/fields/PointsBalanceSum__c.field-meta.xml
<CustomField>
    <fullName>PointsBalanceSum__c</fullName>
    <description>Sum of All Points.Balance</description>
    <label>Points Balance Sum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>