force-app/main/default/objects/MemberBalanceStatus__c/fields/PointsTotalPointsSum__c.field-meta.xml
<CustomField>
    <fullName>PointsTotalPointsSum__c</fullName>
    <description>Sum of all Point.Total Points</description>
    <label>Points Total Points Sum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>