force-app/main/default/objects/MemberBalanceStatus__c/fields/TotalPointsMismatch__c.field-meta.xml
<CustomField>
    <fullName>TotalPointsMismatch__c</fullName>
    <externalId>true</externalId>
    <label>TotalPointsMismatch</label>
    <length>1</length>
    <type>Text</type>
</CustomField>